--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "npm run build && electron ./dist/main.js",
-    "run": "electron ./dist/main.js"
+    "run": "electron ./dist/main.js",
+    "package-host": "npx electron-packager ./ Surfer --overwrite"
   },
   "main": "./dist/main.js",
   "author": "Enrike Churin",
@@ -16,7 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "electron": "^19.0.4",
+    "electron": "^19.0.9",
     "electron-packager": "^15.5.1",
     "eslint": "^7.32.0",
     "typescript": "^4.7.3"
