--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "electron": "^19.0.8",
+    "electron": "^20.0.1",
     "electron-packager": "^15.5.1",
     "eslint": "^7.32.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
   }
 }
