--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "electron-packager": "^15.5.1",
     "eslint": "^7.32.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "@cliqz/adblocker-electron": "^1.24.0",
+    "cross-fetch": "^3.1.5"
   }
 }
